--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   faker: ^2.1.0
+  intl: ^0.19.0
+  font_awesome_flutter: ^10.6.0
+  fl_chart: ^0.66.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - paths/
+    - paths/fonts/BebasNeue-Regular.ttf
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
