--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_storage: ^11.2.4
   fluttertoast: ^8.2.2
   google_sign_in: ^6.1.5
+  image_picker: ^1.0.6
 
 dev_dependencies:
   flutter_test:
